# h264_relay_server

./: README.md
h264_client/app/: build.gradle
h264_client/app/src/main/: AndroidManifest.xml
h264_client/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
h264_client/app/src/main/cpp/asio-1.13.0/: configure
h264_client/app/src/main/cpp/asio-1.13.0/include/asio/: dtls.hpp
h264_client/app/src/main/cpp/asio-1.13.0/include/asio/detail/: reactive_socket_accept_op.hpp
h264_client/app/src/main/cpp/asio-1.13.0/include/asio/ssl/dtls/: default_cookie_generator.hpp
h264_client/app/src/main/cpp/asio-1.13.0/include/asio/ssl/dtls/detail/: buffered_dtls_listen_op.hpp  cookie_generate_callback.hpp  core.hpp  datagram_io.hpp  engine.hpp  handshake_op.hpp  macro_helper.hpp  read_op.hpp  shutdown_op.hpp  ssl_app_data.hpp
h264_client/app/src/main/cpp/asio-1.13.0/include/asio/ssl/dtls/impl/: context.ipp  src.hpp
h264_client/app/src/main/cpp/asio-1.13.0/src/tests/: Makefile.in
h264_client/app/src/main/cpp/asio-1.13.0/src/tests/unit/ip/: address_v4.cpp  address_v4_iterator.cpp  address_v6_iterator.cpp
h264_client/app/src/main/cpp/base/: debug-msg-c.h  debug-msg.cpp  loop.cpp  loop.h
h264_client/app/src/main/cpp/base/url/: url.cpp  url.hpp  url_own.cpp  url_own.h
h264_client/app/src/main/cpp/circular-1.0/: bounded_buffer.h  circular.h  main.cpp
h264_client/app/src/main/cpp/media/h264/: H264Rtp.cpp  H264Rtp.h  bs.cpp  bs.h  h264_sei.cpp  h264_sei.h  h264_stream.cpp  h264_stream.h  parser.cpp  parser.h
h264_client/app/src/main/cpp/net/: check_stream.h
h264_client/app/src/main/cpp/net/asio/event/: event_proc.cpp  event_proc.h
h264_client/app/src/main/cpp/net/asio/tcp_client/: CTCPStream.cpp  CTCPStream.h  IBaseStream.h  stream-client-i.h  stream_live.cpp  stream_live.h  stream_live.pb.h  stream_manager.cpp  stream_manager.h
h264_client/app/src/main/java/com/example/h264_client/: H264ClientJni.java  H264ClientTest.java  OnH264ClientJniListener.java
h264_client/app/src/main/res/layout/: activity_main.xml
h264_client/app/src/main/res/values/: strings.xml
h264_client/gradle/wrapper/: gradle-wrapper.properties
h264_relay_server/: settings.gradle
h264_relay_server/app/: build.gradle
h264_relay_server/app/src/androidTest/java/com/example/h264_relay_server/: ExampleInstrumentedTest.java
h264_relay_server/app/src/main/: AndroidManifest.xml
h264_relay_server/app/src/main/assets/: wildlife.1m.h264
h264_relay_server/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
h264_relay_server/app/src/main/cpp/asio-1.13.0/: README  configure.ac
h264_relay_server/app/src/main/cpp/asio-1.13.0/include/: Makefile.in
h264_relay_server/app/src/main/cpp/asio-1.13.0/include/asio/detail/: io_object_impl.hpp  win_iocp_socket_accept_op.hpp
h264_relay_server/app/src/main/cpp/asio-1.13.0/include/asio/ssl/dtls/: acceptor.hpp  context.hpp  error_code.hpp  socket.hpp
h264_relay_server/app/src/main/cpp/asio-1.13.0/include/asio/ssl/dtls/detail/: buffered_handshake_op.hpp  cookie_verify_callback.hpp  datagram_helper.hpp  listen_op.hpp  steady_timer.hpp  write_op.hpp
h264_relay_server/app/src/main/cpp/asio-1.13.0/include/asio/ssl/dtls/detail/impl/: engine.ipp
h264_relay_server/app/src/main/cpp/asio-1.13.0/include/asio/ssl/dtls/impl/: context.hpp
h264_relay_server/app/src/main/cpp/asio-1.13.0/src/examples/cpp11/: Makefile.in
h264_relay_server/app/src/main/cpp/asio-1.13.0/src/examples/cpp14/: Makefile.in
h264_relay_server/app/src/main/cpp/asio-1.13.0/src/examples/cpp17/: Makefile.in
h264_relay_server/app/src/main/cpp/asio-1.13.0/src/tests/unit/: buffer.cpp
h264_relay_server/app/src/main/cpp/asio-1.13.0/src/tests/unit/ip/: address_v4_range.cpp  address_v6.cpp  address_v6_range.cpp  tcp.cpp
h264_relay_server/app/src/main/cpp/base/: debug-msg-c.h  time-common.h
h264_relay_server/app/src/main/cpp/circular-1.0/: bounded_buffer.h  circular.h
h264_relay_server/app/src/main/cpp/net/: check_stream.h
h264_relay_server/app/src/main/cpp/net/asio/tcp_client/: CTCPStream.cpp  CTCPStream.h  novo-client-i.h  novo-client-wrap-i.h  novo-client.cpp  novo-client.h
h264_relay_server/app/src/main/cpp/net/asio/tcp_server/: connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  header.hpp  live_stream_server-c.h  mime_types.cpp  mime_types.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp  server_push_frame_mock.h  tcp-server-i.h  tcp-server.cpp  tcp-server.h
h264_relay_server/app/src/main/java/com/example/h264_relay_server/: H264RelayServerJni.java  H264RelayServerTest.java
h264_relay_server/app/src/main/res/values/: strings.xml
h264_relay_server/app/src/test/java/com/example/h264_relay_server/: ExampleUnitTest.java
h264_relay_server/gradle/wrapper/: gradle-wrapper.properties
